fix(layout): set overflow: hidden

--- a/src/components/layout.less
+++ b/src/components/layout.less
@@ -5,3 +5,7 @@ html, body {
   padding: 0;
   font-family: @font-family-base;
 }
+
+main {
+  overflow: hidden;
+}
